# rust_web_frameworks_size

./: .gitignore  run_examples.sh
actix_server_example/: Cargo.toml
actix_server_example/src/: main.rs
axum_server_example/: Cargo.toml
axum_server_example/src/: main.rs
hyper_server_example/: Cargo.toml
hyper_server_example/src/: main.rs
poem_server_example/: Cargo.toml
poem_server_example/src/: main.rs
rocket_server_example/: Cargo.toml
rocket_server_example/src/: main.rs
salvo_server_example/: Cargo.toml
salvo_server_example/src/: main.rs
