[package]
name = "axum_server_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", default-features = false, features = ["http1", "tokio"] }
tower-http = { version = "0.5.1", default-features = false, features = ["fs"] }
tokio = { version = "1.36.0", default-features = false, features=["rt-multi-thread"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
