[package]
name = "hyper_server_example"
version = "0.1.0"
edition = "2021"


[dependencies]
hyper = { version = "1", features = ["http1"] }
tokio = { version = "1", default-features = false, features = ["fs", "macros", "rt-multi-thread"] }
hyper-util = { version = "0.1", features = ["tokio", "server"] }
bytes = {version = "1.5.0", default-features = false }
http-body-util = "0.1.0"
futures-util = { version = "0.3.30", default-features = false }
tokio-util = { version = "0.7.10", features = ["io"] }
