[package]
name = "rocket_server_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0", default-features = false }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
